# RAG-Enhanced-Elderly-Care-Robot-Simulation

./: .gitignore  ARCHITECTURE.md  PHASE0_SESSION_SUMMARY.md  PHASE1_SESSION_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  PHASE2_SESSION_SUMMARY.md  PHASE3_KICKOFF.md  README.md  SETUP.md  debug_model.py  requirements.txt
config/: llm_config.yaml  nli_config.yaml  rag_config.yaml  robot_config.yaml
data/chroma_db/: chroma.sqlite3
knowledge_base/elderly_care/: fall_prevention.md  medication_safety.md
knowledge_base/medications/: arthritis_meds.md  cardiac_meds.md  copd_meds.md  dementia_meds.md  diabetes_meds.md  drug_interactions.md  hypertension_meds.md  osteoporosis_meds.md
ros2_ws/src/llm_interface/: package.xml  setup.py
ros2_ws/src/llm_interface/llm_interface/: __init__.py  llm_node.py  model_loader.py  ollama_client.py  prompt_builder.py
ros2_ws/src/nli_processor/: package.xml  setup.cfg  setup.py
ros2_ws/src/nli_processor/nli_processor/: __init__.py  entity_extractor.py  intent_classifier.py  nli_node.py
ros2_ws/src/nli_processor/nli_processor/tests/: test_nli.py
ros2_ws/src/rag_server/: package.xml  setup.cfg  setup.py  test_document_loader.py
ros2_ws/src/rag_server/rag_server/: __init__.py  config_integration.py  document_loader.py  embeddings.py  rag_server_node.py  retriever.py  vector_db.py
